--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
-/* General Styling */
+/* General Style and Mobile Style*/
+/* Logo Animation */
 @keyframes logoanimation {
     from{
         opacity: 0%;
@@ -19,6 +20,7 @@ body{
     background-image: url('../images/concrete_seamless.png');
     background-color:  #f1f1f1;
 }
+
 header{
     display: flex;
     flex-direction: column;
@@ -26,9 +28,11 @@ header{
     align-items: center;
     align-content: center;
 }
+
 a:visited{
     color: #0000FF;
 }
+
 .card > header{
     background: #288088;
     border: 2px solid #45ADAD;
@@ -36,13 +40,14 @@ a:visited{
     border-top-left-radius: 50px;
     border-top-right-radius: 50px;
 }
+
 .card {
-    /* No 100% sure we are suppose to use width */
     flex: 1 1 0;
     width: 450px;
     border-top-left-radius: 50px;
     border-top-right-radius: 50px;
 }
+
 .pricing{
     display: flex;
     align-content: center;
@@ -65,7 +70,7 @@ a:visited{
     align-items: stretch;
 }
 
-/* For screens that are bigger than 900px */
+/* Styling for screens that are bigger than 900px */
 @media screen and ( min-width: 900px ) {
     header{
         display: flex;
@@ -95,7 +100,7 @@ a:visited{
     }
 }
 
-/* For media devices that want reduced motion */
+/* Styling for media devices that want reduced motion */
 @media (prefers-reduced-motion) {
     #logo{
         animation: none;
@@ -104,7 +109,7 @@ a:visited{
     }
 }
 
-/* For print format */
+/* Styling when printing the webpage */
 @media print{
     body{
         font-family: Arial, Helvetica;
@@ -134,5 +139,4 @@ a:visited{
     #gallery, .gallery{
         display: none;
     }
-    
 }
